cluster/apps/external/nas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: external
spec:
  type: ExternalName
  externalName: "${NAS_ADDR}"
  ports:
    - port: 80
