cluster/apps/external/nas/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  namespace: external
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-${POD_CERT_ENV}"
    hajimari.io/appName: "nas"
    hajimari.io/enable: "true"
    hajimari.io/icon: "nas"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
    - hosts:
        - "nas.${SECRET_DOMAIN}"
      secretName: "nas-tls"
  rules:
    - host: "nas.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nas
                port:
                  number: 80
